# battletech-roster-builder

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml
scripts/: upload-assets.sh
src/bt_roster/: __main__.py  api.py  cli.py  formatter.py  generator.py  missions.py  models.py  pilots.py
