[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bt-roster"
version = "0.1.0"
description = "BattleTech Classic roster builder CLI"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
bt-roster = "bt_roster.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bt_roster"]
